# fnine

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  README_zh.md  plan.md
.github/workflows/: ci.yml  docker.yml
src/: config.rs  error.rs  main.rs  state.rs
src/cache/: mod.rs
src/db/: annotations.rs  books.rs  mod.rs  progress.rs  settings.rs  store.rs
src/epub/: parser.rs
src/handlers/: api_annotations.rs  api_books.rs  api_progress.rs  api_recent.rs  api_settings.rs  library.rs  mod.rs  reader.rs  search.rs
src/i18n/: en.toml  translations.rs  zh.toml
static/css/: style.css
static/js/: reader.js
templates/: base.html  book_detail.html  index.html  reader.html  search.html  settings.html  upload.html
templates/components/: book_card.html
