[package]
name = "fnine"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.16.0", features = ["std", "derive"] }
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4.45", features = ["serde"] }
rbook = "0.7.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }
serde_json = "1.0"
